banks/ckad-mock-01/q03/expected/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-guard
  namespace: orbit
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - port: 80
          protocol: TCP
  podSelector:
    matchLabels:
      role: api
  policyTypes:
    - Ingress
    - Egress
